# qa-ivi

./: .gitignore  .secrets-example.toml  README.md  pyproject.toml  pytest.ini  settings.toml
client/: base_client.py  character_client.py
helper/: common_steps.py  logger.py
schema/: characters.py
tests/: conftest.py  test_characters.py
